feat: convert game to hsl with untested code created using find and replace

--- a/myrgb.html
+++ b/myrgb.html
@@ -7,9 +7,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Guess My RGB</title>
+    <title>Guess My HSL</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A simple RGB color guessing game.">
+    <meta name="description" content="A simple HSL color guessing game.">
     <style>
       html {
         height: 100%;
@@ -83,32 +83,35 @@
       const LOGGING = false
       const MAX_ATTEMPTS = 99
 
-      let r = 0
-      let g = 0
-      let b = 0
-      let rin, gin, bin
-      let rr, gg, bb
+      let h = 0
+      let s = 0
+      let l = 0
+      let hInput, sInput, lInput
+      let hh, ss, ll
       let info, submit, restart, result, status, mode
       let attempts = 0
       let statusTimer = null
       let slidersFrozen = false
 
       function init () {
-        rin = document.getElementById('rin')
-        gin = document.getElementById('gin')
-        bin = document.getElementById('bin')
+        hInput = document.getElementById('hin')
+        sInput = document.getElementById('sin')
+        lInput = document.getElementById('lin')
         info = document.getElementById('info')
         submit = document.getElementById('submit')
         restart = document.getElementById('restart')
         result = document.getElementById('result')
         status = document.getElementById('status')
         mode = document.getElementById('mode')
-        rin.addEventListener('change', readInput)
-        gin.addEventListener('change', readInput)
-        bin.addEventListener('change', readInput)
-        rin.addEventListener('input', readInput)
-        gin.addEventListener('input', readInput)
-        bin.addEventListener('input', readInput)
+
+        hInput.addEventListener('change', readInput)
+        sInput.addEventListener('change', readInput)
+        lInput.addEventListener('change', readInput)
+
+        hInput.addEventListener('input', readInput)
+        sInput.addEventListener('input', readInput)
+        lInput.addEventListener('input', readInput)
+        
         submit.addEventListener('click', submitInput)
         restart.addEventListener('click', newGame)
         mode.addEventListener('click', changeMode)
@@ -116,25 +119,25 @@
       }
 
       function newGame () {
-        pickRGB()
-        setupGame(r, g, b)
+        pickHSL()
+        setupGame(h, s, l)
       }
 
-      function setGame (rr, gg, bb) { // eslint-disable-line no-unused-vars
+      function setGame (hh, ss, ll) { // eslint-disable-line no-unused-vars
         // Useful to set arbitrary colors for local testing.
-        r = rr
-        g = gg
-        b = bb
-        setupGame(r, g, b)
+        h = hh
+        s = ss
+        l = ll
+        setupGame(h, s, l)
       }
 
-      function pickRGB () {
-        r = Math.floor(Math.random() * 16)
-        g = Math.floor(Math.random() * 16)
-        b = Math.floor(Math.random() * 16)
+      function pickHSL () {
+        h = Math.floor(Math.random() * 360)
+        s = Math.floor(Math.random() * 100)
+        l = Math.floor(Math.random() * 100)
       }
 
-      function setupGame (r, g, b) {
+      function setupGame (h, s, l) {
         log('setting up new game')
         info.style.display = 'inline-block'
         submit.style.display = 'none'
@@ -142,21 +145,21 @@
         status.style.display = 'none'
         result.innerHTML = ''
         attempts = 0
-        rin.disabled = gin.disabled = bin.disabled = false
+        hInput.disabled = sInput.disabled = lInput.disabled = false
         slidersFrozen = false
-        rin.value = bin.value = gin.value = 7
-        paintGame(r, g, b)
+        hInput.value = lInput.value = sInput.value = 7
+        paintGame(h, s, l)
         mode.href = window.location.hash === '#x' ? '#' : '#x'
         log('new game is ready')
       }
 
-      function paintGame (r, g, b) {
-        const dark = luminance(r, g, b) < luminance(8, 8, 8)
-        document.body.style.background = hex(r, g, b)
+      function paintGame (h, s, l) {
+        const dark = luminance(h, s, l) < luminance(0, 0, 34.5)
+        document.body.style.background = toCssHsl(h, s, l)
         document.body.style.color = dark ? '#fff' : '#000'
-        rin.style.accentColor = dark ? '#f99' : '#900'
-        gin.style.accentColor = dark ? '#0c0' : '#050'
-        bin.style.accentColor = dark ? '#0cf' : '#00f'
+        hInput.style.accentColor = dark ? '#f99' : '#900'
+        sInput.style.accentColor = dark ? '#0c0' : '#050'
+        lInput.style.accentColor = dark ? '#0cf' : '#00f'
         const anchors = document.getElementsByTagName('a')
         for (let i = 0; i < anchors.length; ++i) {
           const a = anchors[i]
@@ -166,36 +169,36 @@
 
       function readInput (e) {
         if (slidersFrozen) {
-          rin.valueAsNumber = rr
-          gin.valueAsNumber = gg
-          bin.valueAsNumber = bb
+          hInput.valueAsNumber = hh
+          sInput.valueAsNumber = ss
+          lInput.valueAsNumber = ll
         } else {
-          rr = rin.valueAsNumber
-          gg = gin.valueAsNumber
-          bb = bin.valueAsNumber
-          submit.innerHTML = 'Submit ' + hex(rr, gg, bb)
+          hh = hInput.valueAsNumber
+          ss = sInput.valueAsNumber
+          ll = lInput.valueAsNumber
+          submit.innerHTML = 'Submit ' + toCssHsl(hh, ss, ll)
           submit.style.display = 'inline-block'
           info.style.display = 'none'
         }
       }
 
       function submitInput () {
-        addMove(r, g, b, rr, gg, bb, ++attempts)
+        addMove(h, s, l, hh, ss, ll, ++attempts)
       }
 
-      function addMove (r, g, b, rr, gg, bb, attempts) {
-        const dark = luminance(rr, gg, bb) < luminance(8, 8, 8)
-        const rgbHex = hex(rr, gg, bb)
-        const won = rr === r && gg === g && bb === b
+      function addMove (h, s, l, hh, ss, ll, attempts) {
+        const dark = luminance(hh, ss, ll) < luminance(8, 8, 8)
+        const hslValue = toCssHsl(hh, ss, ll)
+        const won = hh === h && ss === s && ll === l
         const lPad = attempts < 10 ? '&nbsp;' : ''
         const rPad = '&nbsp;'
-        let scored = score(r, g, b, rr, gg, bb)
+        let scored = score(h, s, l, hh, ss, ll)
         const div = document.createElement('div')
         scored = (scored < 10 ? '0' : '') + scored
-        div.style.background = rgbHex
+        div.style.background = hslValue
         div.style.color = dark ? '#fff' : '#000'
-        div.innerHTML = lPad + attempts + ') ' + rgbHex
-        log('input=' + rr + ',' + gg + ',' + bb + ' hex=' + rgbHex +
+        div.innerHTML = lPad + attempts + ') ' + hslValue
+        log('input=' + hh + ',' + ss + ',' + ll + ' hex=' + hslValue +
             ' scored=' + scored + ' won=' + won)
         if (won) {
           div.innerHTML += ' (Splendid!)' + rPad
@@ -213,7 +216,7 @@
       }
 
       function halt () {
-        rin.disabled = gin.disabled = bin.disabled = true
+        hInput.disabled = sInput.disabled = lInput.disabled = true
         submit.style.display = 'none'
         restart.style.display = 'inline-block'
         log('halt complete')
@@ -226,44 +229,28 @@
         log('win complete')
       }
 
-      function score (r, g, b, rr, gg, bb) {
-        const maxRErr = Math.max(r, 15 - r)
-        const maxGErr = Math.max(g, 15 - g)
-        const maxBErr = Math.max(b, 15 - b)
-        const maxDist = Math.sqrt(maxRErr * maxRErr +
-                                  maxGErr * maxGErr +
-                                  maxBErr * maxBErr)
-        const rErr = Math.abs(rr - r)
-        const gErr = Math.abs(gg - g)
-        const bErr = Math.abs(bb - b)
-        const dist = Math.sqrt(rErr * rErr +
-                               gErr * gErr +
-                               bErr * bErr)
+      function score (h, s, l, hh, ss, ll) {
+        const maxHErr = Math.max(h, 360 - h)
+        const maxSErr = Math.max(s, 100 - s)
+        const maxLErr = Math.max(l, 100 - l)
+        const maxDist = Math.sqrt(maxHErr * maxHErr +
+                                  maxSErr * maxSErr +
+                                  maxLErr * maxLErr)
+        const hErr = Math.abs(hh - h)
+        const sErr = Math.abs(ss - s)
+        const lErr = Math.abs(ll - l)
+        const dist = Math.sqrt(hErr * hErr +
+                               sErr * sErr +
+                               lErr * lErr)
         return Math.floor(100 * (1 - dist / maxDist))
       }
 
-      function hex (r, g, b) {
-        const rs = r.toString(16)
-        const gs = g.toString(16)
-        const bs = b.toString(16)
-        return ('#' + rs + gs + bs).toUpperCase()
+      function toCssHsl (h, s, l) {
+        return (`hsl(${h} ${s}% ${l}%)`).toUpperCase()
       }
 
-      function luminance (r, g, b) {
-        // Reference: https://www.w3.org/TR/WCAG20-TECHS/G17.html
-        const rl = sRGBToLinear(r)
-        const gl = sRGBToLinear(g)
-        const bl = sRGBToLinear(b)
-        return 0.2126 * rl + 0.7152 * gl + 0.0722 * bl
-      }
-
-      function sRGBToLinear (c) {
-        c = c / 15
-        if (c <= 0.03928) {
-          return c / 12.92
-        } else {
-          return Math.pow((c + 0.055) / 1.055, 2.4)
-        }
+      function luminance (h, s, l) {
+        return l; // not technically correct but should be good enough to determine with text color to use
       }
 
       function changeMode (e) {
@@ -307,8 +294,8 @@
         const args = Array.prototype.slice.call(arguments)
         if (LOGGING) {
           console.log('attempts=' + attempts +
-                      ' color=' + r + ',' + g + ',' + b +
-                      ' hex=' + hex(r, g, b) +
+                      ' color=' + h + ',' + s + ',' + l +
+                      ' cssValue=' + toCssHsl(h, s, l) +
                       ' ' + args.join(' '))
         }
       }
@@ -318,7 +305,7 @@
   </head>
   <body>
     <main>
-      <h1>Guess My RGB</h1>
+      <h1>Guess My HSL</h1>
       <div class="ruler">
         <label>&nbsp;</label>
         <div>
@@ -341,16 +328,16 @@
         </div>
       </div>
       <div class="slider">
-        <label for="rin">R</label>
-        <input type="range" id="rin" name="rin" max="15" list="values">
+        <label for="hin">H</label>
+        <input type="range" id="hin" name="hin" max="360">
       </div>
       <div class="slider">
-        <label for="gin">G</label>
-        <input type="range" id="gin" name="gin" max="15" list="values">
+        <label for="sin">S</label>
+        <input type="range" id="sin" name="sin" max="100">
       </div>
       <div class="slider">
-        <label for="bin">B</label>
-        <input type="range" id="bin" name="bin" max="15" list="values">
+        <label for="lin">L</label>
+        <input type="range" id="lin" name="lin" max="100">
       </div>
       <datalist id="values">
         <option value="0" label="0"></option>
@@ -370,17 +357,23 @@
         <option value="14" label="E"></option>
         <option value="15" label="F"></option>
       </datalist>
-      <div id="info">Move the sliders above to guess the background RGB color.</div>
+      <div id="info">Move the sliders above to guess the background HSL color.</div>
       <button id="submit"></button>
       <button id="restart">New Game</button>
       <div id="result"></div>
       <div id="status"></div>
     </main>
     <footer>
-      <a id="mode" href="#x">Mode</a>
-      <a href="https://github.com/susam/myrgb">GitHub</a>
-      <a href="https://mastodon.social/@susam">Mastodon</a>
-      <a href="https://susam.net/links.html">Links</a>
+      <div>
+        <p>Based on <a>Guess My RGB</a></p>
+        <a id="mode" href="#x">Mode</a>
+        <a href="https://github.com/laine-hallot/myrgb">GitHub</a>
+      </div>
+      <div>
+        <a href="https://github.com/susam/myrgb">Original GitHub</a>
+        <a href="https://mastodon.social/@susam">Original Author's Mastodon</a>
+        <a href="https://susam.net/links.html">>Original Author's Links</a>
+      </div>
     </footer>
   </body>
 </html>
