feat: shrink posible values for each channel

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="slider">
         <div class="labled-range">
           <label for="hin">H</label>
-          <input type="range" id="hin" name="hin" max="360" list="values" />
+          <input type="range" id="hin" name="hin" max="360" step="18" />
           <datalist id="values">
             <option value="0" label="R"></option>
             <option value="120" label="G"></option>
@@ -37,11 +37,11 @@
       </div>
       <div class="slider">
         <label for="sin">S</label>
-        <input type="range" id="sin" name="sin" max="100" step=".01" />
+        <input type="range" id="sin" name="sin" max="100" step="5" />
       </div>
       <div class="slider">
         <label for="lin">L</label>
-        <input type="range" id="lin" name="lin" max="100" step=".01" />
+        <input type="range" id="lin" name="lin" max="100" step="5" />
       </div>
       <div id="info">
         Move the sliders above to guess the background HSL color.
